# telecom-platform

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  go.work  package.json  pnpm-workspace.yaml
.github/environments/: production.yml  staging.yml
.github/workflows/: ci.yml  deploy.yml
apps/api-server/: .env.example  go.mod  go.sum  main.go
apps/api-server/cmd/: server.go  server_deps.go  server_metrics.go  server_routes.go
apps/api-server/docs/: api.go  auth.go  docs.go  swagger.go  swagger.json  swagger.yaml
apps/api-server/internal/cache/: cache.go
apps/api-server/internal/circuitbreaker/: circuitbreaker.go
apps/api-server/internal/config/: config.go
apps/api-server/internal/database/: cached.go  database.go
apps/api-server/internal/discovery/: discovery.go  discovery_test.go
apps/api-server/internal/graphql/: generated.go  resolvers.go  resolvers_alerts.go  resolvers_billing.go  resolvers_esim.go  resolvers_mutations.go  resolvers_subscriber.go  resolvers_subscriptions.go  resolvers_test.go  resolvers_usage.go
apps/api-server/internal/handlers/: analytics_handlers.go  analytics_handlers_markets.go  api_integration_test.go  auth.go  auth_test.go  charging_handler.go  currency_handlers.go  errors.go  integration_test.go  platform.go  platform_automation.go  platform_billing.go  platform_chaos.go  platform_config.go  platform_deployments.go  platform_monitoring.go  platform_plugins.go  platform_services.go  security_handlers.go  subscriber.go  util_time.go
apps/api-server/internal/logging/: logging.go
apps/api-server/internal/metrics/: prometheus.go  timeseries.go
apps/api-server/internal/middleware/: auth.go  etag.go  performance.go  ratelimit.go  ratelimit_test.go  redis_ratelimit.go  redis_ratelimit_test.go
apps/api-server/internal/models/: account.go  auth.go  platform.go  subscriber.go
apps/api-server/internal/monitoring/: alerting.go  alerting_test.go  health.go  health_test.go  prometheus.go
apps/api-server/internal/mq/: mq.go
apps/api-server/internal/payment/: controller.go  controller_queries.go  (+8 more)
apps/carrier-connector/: go.mod  go.sum  main.go  routes.go  routes_domain.go  routes_platform.go
apps/carrier-connector/configs/: carriers.json  currencies.json
apps/charging-engine/: .env.example  Cargo.toml
apps/charging-engine/src/: api.rs  auth.rs  charging.rs  circuit_breaker.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  monitoring.rs  rate_limit.rs  routes.rs
apps/charging-engine/src/charging/: credit_management.rs  engine.rs  mod.rs  rating_billing.rs  rating_plans_repo.rs  types.rs
apps/charging-engine/src/errors/: helpers.rs  types.rs
apps/charging-engine/src/handlers/: analytics.rs  block.rs  credit.rs  engine.rs  health.rs  mod.rs  monitoring.rs  rating.rs  subscriber.rs  usage.rs
apps/charging-engine/src/monitoring/: monitoring.rs  monitoring_impl.rs  operations.rs  sync.rs  types.rs
apps/charging-engine/tests/: credit_management_tests.rs  error_tests.rs  rating_billing_tests.rs  validation_tests.rs
apps/cli/: README.md  go.mod  go.sum  main.go
apps/cli/tests/: integration_test.go
apps/packet-gateway/: Cargo.toml  README.md  build.rs
apps/packet-gateway/src/: charging_client.rs  config.rs  ebpf.rs  ebpf_error.rs  health.rs  ip_utils.rs  main.rs  redis_sync.rs
apps/packet-gateway/src/ebpf/: packet_filter.c
apps/web-dashboard/: jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml
apps/web-dashboard/public/: offline.html  sw.js
deployments/autoscaling/: hpa.yaml  vpa.yaml
deployments/docker/: charging-engine.Dockerfile  packet-gateway.Dockerfile
deployments/elk-stack/: elasticsearch.yaml  kibana.yaml  logstash.yaml
deployments/gdpr/: gdpr-compliance.yaml
deployments/helm/telecom-platform/: values.yaml
deployments/kubernetes/manifests/: applications.yaml  configmaps.yaml  hpa.yaml  secrets.yaml
docs/: 5g-network-deployment-guide.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  OPERATIONS.md  QUICK_START.md  building-5g-with-taas.md  esim-operator-analysis.md  gateway-quickstart.md  sdk-usage.md
migrations/: 00001_init_rating_plans.sql  00002_init_esim_profiles.sql  00003_init_subscribers.sql  00004_init_service_plans.sql  00005_init_sessions.sql  00006_init_usage_records.sql  00007_init_users.sql  00008_init_roles_permissions.sql  00009_init_auth_sessions_api_keys.sql  00010_init_plugins.sql  00011_init_automations.sql  00012_init_config_entries.sql  00013_init_deployment_records.sql  00014_init_chaos_experiment_records.sql  00015_init_imsi_allocations.sql  00016_init_payment_methods.sql  00017_init_transactions.sql  00018_init_notifications_alerts.sql
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alert_rules.yml
scripts/: dev-setup.sh  setup-mongodb.sh  setup-redis.sh  test-free5gc.sh  verify-deployment.sh
sdk/elixir/: README.md  mix.exs
sdk/elixir/lib/: telecom_sdk.ex
sdk/go/: README.md  analytics_api.go  auth.go  client.go  currency_api.go  go.mod  graphql_api.go  payments_api.go  rating_plans_api.go  security_api.go  subscribers_api.go  system_api.go  telecom.go  types.go  usage_api.go
sdk/kotlin/: README.md  build.gradle.kts
sdk/python/: README.md  requirements.txt
sdk/python/telecom_sdk/: __init__.py  analytics.py  api.py  auth.py  client.py  currency.py  exceptions.py  security.py  types.py  websocket.py
sdk/ruby/: README.md  telecom_sdk.gemspec
sdk/ruby/lib/: telecom_sdk.rb
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
sdk/rust/src/api/: analytics.rs  currency.rs  graphql.rs  mod.rs  payments.rs  rating_plans.rs  security.rs  subscribers.rs  system.rs  usage.rs
sdk/swift/: Package.swift  README.md
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: analytics.ts  auth.ts  currency.ts  index.ts  security.ts  telecom-sdk.ts  types.ts  websocket.ts
terraform/provider/: client.go  datasources.go  go.mod  go.sum  main.go  resources.go
(+335 files in other folders)
