[package]
name = "packet-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
ebpf = []

[dependencies]
aya = { version = "0.13.1", features = ["async_tokio"], optional = true }
aya-log = { version = "0.2.1", optional = true }
tokio = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "packet-gateway"
path = "src/main.rs"
