[package]
name = "telecom-sdk"
version = "1.0.0"
edition = "2024"
authors = ["nutcas3 <nutcas3@users.noreply.github.com>"]
description = "Rust SDK for Telecom Platform"
license = "MIT"
repository = "https://github.com/nutcas3/telecom-platform"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
tokio-test = "0.4.5"
