[package]
name = "telecom-sdk"
version = "1.0.0"
edition = "2024"
authors = ["nutcas3 <nutcas3@users.noreply.github.com>"]
description = "Rust SDK for Telecom Platform"
license = "MIT"
repository = "https://github.com/nutcas3/telecom-platform"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
